# fast_math

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yaml
benchmark/: benchmark.py
python/fast_math/: __init__.py  cumsum.py  sum.py
python/tests/: test_accuracy.py  test_compatibility.py  test_cumsum.py  test_sum.py
rust/: Cargo.toml
rust/src/: accumulator.rs  array.rs  cumsum.rs  expansion.rs  float.rs  lib.rs  online_sum.rs  sum.rs
