[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "fast_math"
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
homepage = "https://github.com/rob-sil/fast_math"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fast_math.rust_fast_math"
python-source = "python"

[tool.isort]
profile = "black"
